XEngine.Gfx.ShaderLibraryBuilder: Minor updates

--- a/XEngine.Render.Shaders/XEngine.Render.Shaders.vcxproj
+++ b/XEngine.Render.Shaders/XEngine.Render.Shaders.vcxproj
@@ -28,7 +28,7 @@
 
   <PropertyGroup>
     <NMakeBuildCommandLine>
-      $(SolutionDir)Build\XEngine.Gfx.ShaderLibraryBuilder_x64.Debug.exe
+      $(SolutionDir)Build\XEngine.Gfx.ShaderLibraryBuilder_x64.Debug.exe -libdef="$(ProjectDir)$(ProjectName).libdef.json" -out="$(OutDir)$(ProjectName).xeslib"
     </NMakeBuildCommandLine>
   </PropertyGroup>
 
