--- a/Game0/Game0.vcxproj
+++ b/Game0/Game0.vcxproj
@@ -54,6 +54,10 @@
     <ProjectReference Include="..\XEngine.System\XEngine.System.vcxproj">
       <Project>{107c587b-0d5f-4de1-a06b-5fc8c7b1051b}</Project>
     </ProjectReference>
+    <!-- TODO: Remove -->
+    <ProjectReference Include="..\XEngine.Render.Shaders\XEngine.Render.Shaders.vcxproj">
+      <Project>{e6af7fdc-1839-4501-96b6-389ab9cafddb}</Project>
+    </ProjectReference>
   </ItemGroup>
 
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
