--- a/XEngine.Gfx.ShaderLibraryBuilder/XEngine.Gfx.ShaderLibraryBuilder.vcxproj
+++ b/XEngine.Gfx.ShaderLibraryBuilder/XEngine.Gfx.ShaderLibraryBuilder.vcxproj
@@ -29,11 +29,13 @@
   <Import Project="$(ProjectDefaultsPropsPath)" />
 
   <ItemGroup>
-    <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.h" />
+    <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.LibraryDefinition.h" />
     <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.LibraryDefinitionLoader.h" />
+    <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.Shader.h" />
     <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.SourceCache.h" />
     <ClCompile Include="XEngine.Gfx.ShaderLibraryBuilder.cpp" />
     <ClCompile Include="XEngine.Gfx.ShaderLibraryBuilder.LibraryDefinitionLoader.cpp" />
+    <ClCompile Include="XEngine.Gfx.ShaderLibraryBuilder.Shader.cpp" />
     <ClCompile Include="XEngine.Gfx.ShaderLibraryBuilder.SourceCache.cpp" />
   </ItemGroup>
 
