--- a/XLib/XLib.vcxproj
+++ b/XLib/XLib.vcxproj
@@ -50,7 +50,6 @@
   <ItemGroup>
     <ClInclude Include="Source\XLib.Algorithm.QuickSort.h" />
     <ClInclude Include="Source\XLib.Allocation.h" />
-    <ClInclude Include="Source\XLib.AllocatorAdapterBase.h" />
     <ClInclude Include="Source\XLib.ByteStream.h" />
     <ClInclude Include="Source\XLib.CharStream.h" />
     <ClInclude Include="Source\XLib.Color.h" />
@@ -99,14 +98,13 @@
     <ClInclude Include="Source\XLib.System.Timer.h" />
     <ClInclude Include="Source\XLib.System.VirtualMemory.h" />
     <ClInclude Include="Source\XLib.System.Window.h" />
-    <ClInclude Include="Source\XLib.SystemHeapAllocator.h" />
-    <ClInclude Include="Source\XLib.Text.h" />
     <ClInclude Include="Source\XLib.Time.h" />
     <ClInclude Include="Source\XLib.Vectors.Arithmetics.h" />
     <ClInclude Include="Source\XLib.Vectors.h" />
     <ClInclude Include="Source\XLib.Vectors.Math.h" />
 
     <ClCompile Include="Source\XLib.cpp" />
+    <ClCompile Include="Source\XLib.Allocation.cpp" />
     <ClCompile Include="Source\XLib.CRC.cpp" />
     <ClCompile Include="Source\XLib.CharStream.cpp" />
     <ClCompile Include="Source\XLib.FileSystem.cpp" />
@@ -128,8 +126,6 @@
     <ClCompile Include="Source\XLib.System.Threading.Event.cpp" />
     <ClCompile Include="Source\XLib.System.Timer.cpp" />
     <ClCompile Include="Source\XLib.System.Window.cpp" />
-    <ClCompile Include="Source\XLib.SystemHeapAllocator.cpp" />
-    <ClCompile Include="Source\XLib.Text.cpp" />
   </ItemGroup>
 
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
