--- a/XEngine.Render.Shaders/XEngine.Render.Shaders.vcxproj
+++ b/XEngine.Render.Shaders/XEngine.Render.Shaders.vcxproj
@@ -34,6 +34,10 @@
 
   <ItemGroup>
     <None Include="XEngine.Render.Shaders.libdef.json" />
+
+    <None Include="FullScreenQuadVS.hlsl" />
+    <None Include="SceneGeometry.hlsl" />
+    <None Include="TestGraphics.hlsl" />
   </ItemGroup>
 
   <ItemGroup>
