--- a/XEngine.Gfx.HAL.ShaderCompiler/XEngine.Gfx.HAL.ShaderCompiler.vcxproj
+++ b/XEngine.Gfx.HAL.ShaderCompiler/XEngine.Gfx.HAL.ShaderCompiler.vcxproj
@@ -64,9 +64,12 @@ xcopy /y $(SolutionDir)Externals\Microsoft.Direct3D.DXC\bin\$(Platform)\*.pdb $(
 
   <ItemGroup>
     <ClInclude Include="XEngine.Gfx.HAL.ShaderCompiler.h" />
-    <ClInclude Include="XEngine.Gfx.HAL.ShaderCompiler.HLSLPatcher.h" />
+    <ClInclude Include="XEngine.Gfx.HAL.ShaderCompiler.ExtPreproc.h" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ClCompile Include="XEngine.Gfx.HAL.ShaderCompiler.cpp" />
-    <ClCompile Include="XEngine.Gfx.HAL.ShaderCompiler.HLSLPatcher.cpp" />
+    <ClCompile Include="XEngine.Gfx.HAL.ShaderCompiler.ExtPreproc.cpp" />
   </ItemGroup>
 
   <ItemGroup>
