XEngine.Gfx.ShaderLibraryBuilder WIP

--- a/XEngine.Gfx.ShaderLibraryBuilder/XEngine.Gfx.ShaderLibraryBuilder.vcxproj
+++ b/XEngine.Gfx.ShaderLibraryBuilder/XEngine.Gfx.ShaderLibraryBuilder.vcxproj
@@ -35,8 +35,8 @@
   </ItemDefinitionGroup>
 
   <ItemGroup>
-    <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.LibraryDefinition.h" />
-    <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.LibraryDefinitionLoader.h" />
+    <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.Library.h" />
+    <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.LibraryManifestLoader.h" />
     <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.Shader.h" />
     <ClInclude Include="XEngine.Gfx.ShaderLibraryBuilder.SourceCache.h" />
     <ClInclude Include="XEngine.Utils.CmdLineArgsParser.h" />
@@ -44,7 +44,7 @@
 
   <ItemGroup>
     <ClCompile Include="XEngine.Gfx.ShaderLibraryBuilder.cpp" />
-    <ClCompile Include="XEngine.Gfx.ShaderLibraryBuilder.LibraryDefinitionLoader.cpp" />
+    <ClCompile Include="XEngine.Gfx.ShaderLibraryBuilder.LibraryManifestLoader.cpp" />
     <ClCompile Include="XEngine.Gfx.ShaderLibraryBuilder.Shader.cpp" />
     <ClCompile Include="XEngine.Gfx.ShaderLibraryBuilder.SourceCache.cpp" />
     <ClCompile Include="XEngine.Utils.CmdLineArgsParser.cpp" />
